read location button + read contact button + scope default/admin on mycommand